istio/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
    service: customer
spec:
  ports:
  - port: 9090
    name: http
  selector:
    app: customer
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-v1
  labels:
    app: customer
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
      version: v1
  template:
    metadata:
      labels:
        app: customer
        version: v1
    spec:
      serviceAccountName: customer-details
      containers:
      - name: customer
        image: kuldeep99/customer:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
---
