istio/prac-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practice
  labels:
    app: practice
    service: practice
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: practice
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice-v1
  labels:
    app: practice
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: practice
      version: v1
  template:
    metadata:
      labels:
        app: practice
        version: v1
    spec:
      serviceAccountName: practice-details
      containers:
      - name: practice
        image: kuldeep99/practice:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice-v2
  labels:
    app: practice
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: practice
      version: v2
  template:
    metadata:
      labels:
        app: practice
        version: v2
    spec:
      serviceAccountName: practice-details
      containers:
      - name: practice
        image: kuldeep99/practice:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice-v3
  labels:
    app: practice
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: practice
      version: v3
  template:
    metadata:
      labels:
        app: practice
        version: v3
    spec:
      serviceAccountName: practice-details
      containers:
      - name: practice
        image: kuldeep99/practice:v3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
