istio/prac-tls-policy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: practice
spec:
  host: practice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
