istio/practice-destination_oulier_v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: practice
spec:
  host: practice
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
    trafficPolicy:
      connectionPool:
        http:
          http1MaxPendingRequests: 1
          maxRequestsPerConnection: 1
        tcp:
          maxConnections: 1
      outlierDetection:
        baseEjectionTime: 180.000s
        consecutive5xxErrors: 1
        consecutiveGatewayErrors: 1
        interval: 5.000s
        maxEjectionPercent: 100
