istio/practice-destination_oulier_v4.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: practice
spec:
  host: practice
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v4
    labels:
      version: v4
    trafficPolicy:
      connectionPool:
        http: {}
        tcp: {}
      outlierDetection:
        baseEjectionTime: 180.000s
        consecutive5xxErrors: 1
        consecutiveGatewayErrors: 1
        interval: 5.000s
        maxEjectionPercent: 100
