istio/practice_mirror_test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: practice
spec:
  hosts:
    - practice
  http:
  - route:
    - destination:
        host: practice
        subset: v1
      weight: 100
    mirror:             
      host: practice
      subset: v4
    mirror_percent: 100
