istio/practice_retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: practice
spec:
  hosts:
  - practice
  http:
  - route:
    - destination:
        host: practice
        subset: v4
      weight: 100
    retries:
      attempts: 10         
      retryOn: 5xx
---
