istio/request_routing_v1_v4.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - customer
  http:
  - route:
    - destination:
        host: customer
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: practice
spec:
  hosts:
    - practice
  http:
  - route:
    - destination:
        host: practice
        subset: v1
      weight: 50
    - destination:
        host: practice
        subset: v4
      weight: 50
      
---
