istio/request_routing_v4.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: practice
spec:
  hosts:
  - practice
  http:
  - route:
    - destination:
        host: practice
        subset: v4
---
